--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "anyproxy": "^4.1.0",
     "axios": "^0.19.0",
     "cheerio": "0.18.0",
+    "domain": "0.0.1",
     "fs": "0.0.1-security",
     "hashmap": "^2.3.0",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "iconv-lite": "0.4.6",
     "line-reader": "0.2.4",
     "request": "^2.81.0",
     "sync-request": "^6.1.0",
+    "url": "^0.11.0",
     "urlencode": "0.2.0"
   }
 }
