--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "https": "^1.0.0",
     "iconv-lite": "0.4.6",
     "line-reader": "0.2.4",
-    "request": "^2.81.0",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
     "sync-request": "^6.1.0",
     "url": "^0.11.0",
     "urlencode": "0.2.0"
